# AI_executions

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py
homeworks/HW04/eda-cli/: pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py
homeworks/HW05/: HW05.ipynb
homeworks/HW05/artifacts/: forest_result.csv  result.csv
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.csv  report.md  search_summaries.json
homeworks/HW07/: HW07.ipynb
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json  report.md
homeworks/HW07/artifacts/labels/: labels_hw07_ds1.csv  labels_hw07_ds2.csv  labels_hw07_ds3.csv
project/notebooks/: eda_v1.ipynb
